css fix for multiselect box overflowing incorrectly - fixes #2316

--- a/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
@@ -72,6 +72,20 @@
             }
         }
     }
+
+    .multiselect.dropdown-toggle {
+        max-width: 270px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-align: left;
+        padding-right: 24px;
+
+        > b.caret {
+            position: absolute;
+            right: 12px;
+            top: 15px;
+        }
+    }
 }
 
 .map-small,
